Se agrega GET y POST para user, GET y DELETE para nickName y POST y DELETE para images e imagesId
